add openapi docs for upload and qr-code endpoint
